@@ -41,6 +41,11 @@ CHANGELOG
 - Fixed a compilation error of the testwave executable (added a missing 
   namespace specifier).
 - Added a missing header to make cpp.re.cpp compile on CW.
+- __BASE_FILE__ predefined macro now returns a properly escaped file name 
+  string.
+- Fixed the function boost::wave::util::impl::unescape_lit().
+- Added the '$F' replacement string to the testwave application. This allows
+  to handle file paths sensitive comparison of the expected and real results.
 
 Tue Mar 22 14:52:45 WEST 2005
 Version 1.1.15
